# tibetan-qna

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: CI.yml
src/TibQA/: combine_q_n_a.py  html_parser.py  pushing_data_to_hugging_hub.py  qa.py  qa_1.py  qa_2.py  qa_3.py  qa_4.py  qa_5.py  qa_6.py  qa_7.py  qa_8.py  qa_9.py
tests/: test_example.py
